--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -9,8 +9,8 @@
     <li> <%=quiz.question %>:<%=quiz.answer%></li>
     <%})%>
     <p>
-     <a href="/credits">Credits</a>
-    <a href="/quizzes">Quizzes</a>
+     <a href="http://localhost:3000/credits">Credits</a>
+    <a href="http://localhost:3000/quizzes">Quizzes</a>
     </p>
   </body>
 </html>
